# DiFD

./: AGENTS.md  pyproject.toml
notebooks/: data_analysis.ipynb  injected_analysis.ipynb
src/DiFD/: __init__.py  logging.py  seed.py
src/DiFD/cli/: __init__.py  evaluate.py  inject.py  optimize.py  train.py
src/DiFD/datasets/: __init__.py  base.py  injected.py  intel_lab.py  registry.py
src/DiFD/evaluation/: __init__.py  evaluator.py  metrics.py
src/DiFD/injection/: __init__.py  base.py  faults.py  injector.py  markov.py  registry.py
src/DiFD/models/: __init__.py  autoformer.py  base.py  gru.py  informer.py  lstm.py  patchtst.py  registry.py  transformer.py
src/DiFD/schema/: __init__.py  config.py  types.py
src/DiFD/training/: __init__.py  callbacks.py  loss.py  oversampling.py  trainer.py  windowing.py
tests/: test_core.py
tests/test_evaluation/: test_evaluation.py
tests/test_injection/: test_injection.py
tests/test_training/: test_training.py  test_windowing.py
